# NC_PSF_Net

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: design.md  design_hybrid.md  design_hybrid_overview.md  design_hybrid_refresh.md  design_strategyB.md
docs/archive/: design_strategyA.md  design_strategyB.md  design_v1_3ch.md
scripts/: build_paired_dataset.py
src_core/: dataloader.py  eval_synthetic.py  generate_psf.py  inference.py  inference.sh  loss.py  model.py  train.sh  trainer.py
src_core/defects/: type1.yaml  type2.yaml  type3.yaml  type4_vector.yaml  type4_vector_strong.yaml  type_low_intensity.yaml
