[project]
name = "background-removal-net"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "psutil>=7.2.2",
    "pyyaml>=6.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tifffile>=2026.2.24",
    "tqdm>=4.66.0",
]

# PyTorch nightly (CUDA 13.0) must be installed manually:
#   uv pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/cu130
